# OpenARHealth

./: README.md
3DSlicerModule/ARHealth/: CMakeLists.txt
3DSlicerModule/ARHealth/ARHealth/: ARHealth.py  CMakeLists.txt
3DSlicerModule/ARHealth/ARHealth/Resources/Models/: ARHealth_BaseModel_10mm.stl  ARHealth_BaseModel_20mm.stl  ARHealth_BaseModel_2mm.stl  ARHealth_BaseModel_30mm.stl  ARHealth_BaseModel_40mm.stl  ARHealth_BaseModel_50mm.stl
Data/3DPrinting/RegistrationMode/: TibiaSectionWithMarkerAdaptor.stl
Data/Markers/Marker2_StickerCubeMarker/: StickerCubeMarker_WHITE.stl  StickerPlacer.stl
Data/Vuforia/: ARHealth_3DPrintedCube_30x30x30.unitypackage
